--- a/templates/base.html
+++ b/templates/base.html
@@ -1,41 +1,145 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
+    <head>
 
-    <!-- Required meta tags -->
-    {% block meta %}
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
+        <!-- Required meta tags -->
+        {% block meta %}
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        {% endblock %}
 
-    {% block extra_meta %}
-    {% endblock %}
+        {% block extra_meta %}
+        {% endblock %}
 
-    <!-- Bootstrap CSS -->
-    {% block corecss %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    {% endblock %}
+        <!-- Bootstrap CSS -->
+        {% block corecss %}
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        {% endblock %}
 
-    {% block extra_css %}
-    {% endblock %}
+        {% block extra_css %}
+        {% endblock %}
 
-    <!-- Optional JavaScript -->
-    <!-- Minified jQuery first, then Popper.js, then Bootstrap JS -->
-    {% block corejs %}
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    {% endblock %}
+        <!-- Optional JavaScript -->
+        <!-- Minified jQuery first, then Popper.js, then Bootstrap JS -->
+        {% block corejs %}
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        {% endblock %}
 
-    {% block extra_js %}
-    {% endblock %}
+        {% block extra_js %}
+        {% endblock %}
 
-    <title>wiGalleria {% block extra_title %}{% endblock %}</title>
-  </head>
-  <body>
-      <header class="container-fluid fixed-top"></header>
+        <title>wiGalleria {% block extra_title %}{% endblock %}</title>
+    </head>
+    <body>
+        <!-- <header class="container-fluid fixed-top">
+            <div class="row">
+                1st div below contains the wiGalleria logo 
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                    <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                        <h2 class="logo-font text-black my-0"><strong>wiGalleria</strong></h2>
+                    </a>
+                </div>
+
+                2nd div below contains the search form.  
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 ">
+                    <form class="form-inline my-2 my-lg-0" method="GET" action="">
+                        <div class="input-group w-100">
+                            <input class="form-control mr-sm-2 border border-black rounded-0" type="text" name="q" placeholder="Search our site" aria-label="Search">
+                            <div class="input-group-append">
+                                <button class="form-control btn btn-black border border-black rounded-0 btn-outline-success my-2 my-sm-0" type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+
+                3rd div below contains the account & shopping cart links.
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 ">
+                    <ul class="list-inline list-unstyled text-left text-lg-right my-0">
+                        <li class="list-inline-item dropdown"></li>
+                        <li class="list-inline-item"></li>
+                    </ul>
+                </div>
+            </div>
+            </header> -->
+
+        <header> 
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+                    <a class="navbar-brand" href="{% url 'home' %}">
+                        <strong>wiGalleria</strong>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav list-inline list-unstyled mr-auto">
+                        <li class="nav-item list-inline-item active">
+                        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <div class="text-center">
+                                    <div><i class="fas fa-user fa-lg"></i></div>
+                                    <p class="my-0">My Account</p>
+                                </div> 
+                            </a>
+                            <div class="dropdown-menu border-0" aria-labelledby="navbarDropdown">
+                                {% if request.user.is_authenticated %}
+                                    <p class="greeting">Welcome {{ user.username }}!</p> 
+                                    {% if request.user.is_superuser %}
+                                        <a href="#" class="dropdown-item">Store Management</a>
+                                    {% endif %}
+                                    <a href="#" class="dropdown-item" >My Profile</a>
+                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            </div>
+                        </li>
+
+                        <li class="list-inline-item">
+                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                    <p class="my-0">
+                                        {% if grand_total %}
+                                            ${{ grand_total|floatformat:2 }}
+                                        {% else %}
+                                            $0.00
+                                        {% endif %}
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0" method="GET" action="">
+                        <div class="input-group w-100">
+                            <input class="form-control mr-sm-2 border border-black rounded-0" type="text" name="q" placeholder="Search our site" aria-label="Search">
+                            <div class="input-group-append">
+                                <button class="form-control btn btn-black border border-black rounded-0 btn-outline-success my-2 my-sm-0" type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </nav>
+        </header>
 
       {% if messgaes %}
           <div class="message-container"></div>
