--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,13 +12,14 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100">
-        <div class="col-9 col-md-5 my-auto">
-            <h1 class="display-4 logo-font text-black">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-white">
                 Quality Wigs at affordable Prices
             </h1>
             <div class="my-5">
                 <h4>
                     <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                    
                 </h4>
             </div>
         </div>
