--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
         <!-- Bootstrap CSS -->
         {% block corecss %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+            <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"> -->
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+            <link rel="stylesheet" href="{% static 'css/base.css' %}">
         {% endblock %}
 
         {% block extra_css %}
@@ -24,6 +27,7 @@
         <!-- Optional JavaScript -->
         <!-- Minified jQuery first, then Popper.js, then Bootstrap JS -->
         {% block corejs %}
+            <script src="https://kit.fontawesome.com/86e830b7c3.js" crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -35,6 +39,7 @@
         <title>wiGalleria {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
+
         <!-- <header class="container-fluid fixed-top">
             <div class="row">
                 1st div below contains the wiGalleria logo 
@@ -74,23 +79,47 @@
             </div>
             </header> -->
 
-        <header> 
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
-                    <a class="navbar-brand" href="{% url 'home' %}">
-                        <strong>wiGalleria</strong>
+        <header class="container-fluid fixed-top">  <!--class="fixed-top">  -->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <!-- <div id="topnav" class="row"> -->
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-flex text-center text-lg-left"> 
+                    <a class="navbar-brand main-logo-link" href="{% url 'home' %}">
+                        wi<em><strong>G</strong></em>alleria
+                        <!-- <strong>wiGalleria</strong> -->
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
-            
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav list-inline list-unstyled mr-auto">
-                        <li class="nav-item list-inline-item active">
-                        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                        </li>
+                </div>
+                <!-- </div> -->
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                    <form method="GET" action="#"> 
+                        <div class="input-group w-100">
+                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                            <div class="input-group-append">
+                                <button class="form-control btn border border-black rounded-0" type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            
+                    <!-- <div class="collapse navbar-collapse col-12 col-lg-4 my-auto py-1 py-lg-0 text-left text-lg-center" id="navbarSupportedContent">
+                        <ul class="navbar-nav list-inline list-unstyled mr-auto">
+                                <li class="nav-item list-inline-item active">
+                                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                                </li> -->
+                        
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                    <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                        <!-- <li class="list-inline-item dropdown"> -->
+                        <li class="nav-item list-inline-item dropdown">
+                            <a class="nav-link text-white" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <div class="text-center">
                                     <div><i class="fas fa-user fa-lg"></i></div>
                                     <p class="my-0">My Account</p>
@@ -105,13 +134,14 @@
                                     <a href="#" class="dropdown-item" >My Profile</a>
                                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                                 {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                {% endif %}
                             </div>
                         </li>
 
                         <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
                                 <div class="text-center">
                                     <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                     <p class="my-0">
@@ -125,19 +155,8 @@
                             </a>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0" method="GET" action="">
-                        <div class="input-group w-100">
-                            <input class="form-control mr-sm-2 border border-black rounded-0" type="text" name="q" placeholder="Search our site" aria-label="Search">
-                            <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0 btn-outline-success my-2 my-sm-0" type="submit">
-                                    <span class="icon">
-                                        <i class="fas fa-search"></i>
-                                    </span>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
                 </div>
+                <!-- </div> -->
             </nav>
         </header>
 
