--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,8 +38,21 @@ body {
 }
 
 .text-white {
-    color: white;
+    color: #fff !important;
 }
+
+.text-black {
+    color: #000 !important;
+}
+
+
+.bg-dark {
+    background-color: #e75480 !important;
+}
+
+/* .text-blue {
+    color: #000080 !important;
+} */
 
 .shop-now-button:hover,
 .shop-now-button:active,
