--- a/templates/base.html
+++ b/templates/base.html
@@ -79,21 +79,62 @@
             </div>
             </header> -->
 
-        <header class="container-fluid fixed-top">  <!--class="fixed-top">  -->
+        <header class="container-fluid fixed-top">  
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <!-- <div id="topnav" class="row"> -->
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-flex text-center text-lg-left"> 
-                    <a class="navbar-brand main-logo-link" href="{% url 'home' %}">
-                        wi<em><strong>G</strong></em>alleria
-                        <!-- <strong>wiGalleria</strong> -->
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
+                <!-- <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-flex text-center text-lg-left">  -->
+                <a class="navbar-brand main-logo-link" href="{% url 'home' %}">
+                    wi<em><strong>G</strong></em>alleria
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
                 <!-- </div> -->
+                  
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
 
-                
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            All Products
+                        </button>
+                        <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item text-white" href="#">By Price</a>
+                            <a class="dropdown-item text-white" href="#">By Rating</a>
+                            <a class="dropdown-item text-white" href="#">By Category</a>
+                            <a class="dropdown-item text-white" href="#">All Products</a>
+                        </div>
+                    </div>
+
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Wigs 
+                        </button>
+                        <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item text-white" href="#">Human Hair</a>
+                            <a class="dropdown-item text-white" href="#">Synthetic Hair</a>
+                            <a class="dropdown-item text-white" href="#">Cosplay Wigs</a>
+                            <a class="dropdown-item text-white" href="#">All Wigs</a>
+                        </div>
+                    </div>
+
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle text-white" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Hair Care Products
+                        </button>
+                        <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item text-white" href="#">Shampoo</a>
+                            <a class="dropdown-item text-white" href="#">Conditioner</a>
+                            <a class="dropdown-item text-white" href="#">Oils</a>
+                            <a class="dropdown-item text-white" href="#">All Hair Care Products</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="#"> 
                         <div class="input-group w-100">
@@ -108,16 +149,9 @@
                         </div>
                     </form>
                 </div>
-            
-                    <!-- <div class="collapse navbar-collapse col-12 col-lg-4 my-auto py-1 py-lg-0 text-left text-lg-center" id="navbarSupportedContent">
-                        <ul class="navbar-nav list-inline list-unstyled mr-auto">
-                                <li class="nav-item list-inline-item active">
-                                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                                </li> -->
                         
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                        <!-- <li class="list-inline-item dropdown"> -->
                         <li class="nav-item list-inline-item dropdown">
                             <a class="nav-link text-white" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <div class="text-center">
@@ -141,14 +175,14 @@
                         </li>
 
                         <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                            <a class="{% if grand_total %}text-black font-weight-bold{% else %}text-white{% endif %} nav-link" href="#">
                                 <div class="text-center">
-                                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                    <div><i class="fas fa-shopping-cart fa-lg"></i></div>
                                     <p class="my-0">
                                         {% if grand_total %}
-                                            ${{ grand_total|floatformat:2 }}
+                                            €{{ grand_total|floatformat:2 }}
                                         {% else %}
-                                            $0.00
+                                            €0.00
                                         {% endif %}
                                     </p>
                                 </div>
@@ -156,7 +190,6 @@
                         </li>
                     </ul>
                 </div>
-                <!-- </div> -->
             </nav>
         </header>
 
