--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -11,10 +11,22 @@
                 All Products
             </button>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="all-products-link">
-                <a class="dropdown-item text-white" href="#">By Price</a>
-                <a class="dropdown-item text-white" href="#">By Rating</a>
-                <a class="dropdown-item text-white" href="#">By Category</a>
-                <a class="dropdown-item text-white" href="#">All Products</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">By Price</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">By Rating</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">By Category</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">All Products</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <button class="btn dropdown-toggle text-white" type="button" id="wigs-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Wigs
+            </button>
+            <div class="dropdown-menu border-0 bg-dark" aria-labelledby="wigs-link">
+                <a class="dropdown-item text-white" href="{% url 'products' %}">360 Lace Wigs</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Frontal Lace wigs</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Synthetic Wigs</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">All Wigs</a>
             </div>
         </li>
 
@@ -23,10 +35,10 @@
                 Hair Care Products
             </button>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="hair-care-products-link">
-                <a class="dropdown-item text-white" href="#">Hair Shampoo</a>
-                <a class="dropdown-item text-white" href="#">Hair Conditioner</a>
-                <a class="dropdown-item text-white" href="#">Hair Oils & Cream</a>
-                <a class="dropdown-item text-white" href="#">All Hair Care Products</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Hair Shampoo</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Hair Conditioner</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Hair Oils & Cream</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">All Hair Care Products</a>
             </div>
         </li>
 
@@ -35,10 +47,10 @@
                 Deals
             </button>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="deals-link">
-                <a class="dropdown-item text-white" href="#">Under €10</a>
-                <a class="dropdown-item text-white" href="#">Under €20</a>
-                <a class="dropdown-item text-white" href="#">Under €30</a>
-                <a class="dropdown-item text-white" href="#">All deals</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Under €10</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Under €20</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">Under €30</a>
+                <a class="dropdown-item text-white" href="{% url 'products' %}">All deals</a>
             </div>
         </li>
     </ul>
