--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse" id="collapsibleNavbar">
+<div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item d-block d-md-none">
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
@@ -7,50 +7,62 @@
         </li>
 
         <li class="nav-item dropdown">
-            <button class="btn dropdown-toggle text-white" type="button" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!-- <button class="btn dropdown-toggle font-weight-bold text-white border-0" type="button" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
-            </button>
+            </button> -->
+            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                All Products
+            </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="all-products-link">
-                <a class="dropdown-item text-white" href="{% url 'products' %}">By Price</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">By Rating</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">By Category</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">All Products</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">By Price</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">By Rating</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">By Category</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Products</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <button class="btn dropdown-toggle text-white" type="button" id="wigs-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="wigs-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Wigs
-            </button>
+            </button> -->
+            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Wigs
+            </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="wigs-link">
-                <a class="dropdown-item text-white" href="{% url 'products' %}">360 Lace Wigs</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Frontal Lace wigs</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Synthetic Wigs</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">All Wigs</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">360 Lace Wigs</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Frontal Lace wigs</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Synthetic Wigs</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Wigs</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <button class="btn dropdown-toggle text-white" type="button" id="hair-care-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="hair-care-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hair Care Products
-            </button>
+            </button> -->
+            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Hair Care Products
+            </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="hair-care-products-link">
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Hair Shampoo</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Hair Conditioner</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Hair Oils & Cream</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">All Hair Care Products</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Shampoo</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Conditioner</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Oils & Cream</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Hair Care Products</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <button class="btn dropdown-toggle text-white" type="button" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Deals
-            </button>
+            </button> -->
+            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Deals
+            </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="deals-link">
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Under €10</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Under €20</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">Under €30</a>
-                <a class="dropdown-item text-white" href="{% url 'products' %}">All deals</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Under €10</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Under €20</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Under €30</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All deals</a>
             </div>
         </li>
     </ul>
