Rename some products

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -30,7 +30,7 @@
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="wigs-link">
                 <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">360 Lace Wigs</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Frontal Lace wigs</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Frontal Lace Wigs</a>
                 <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Synthetic Wigs</a>
                 <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Wigs</a>
             </div>
@@ -46,7 +46,7 @@
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="hair-care-products-link">
                 <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Shampoo</a>
                 <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Conditioner</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Oils & Cream</a>
+                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Oils</a>
                 <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Hair Care Products</a>
             </div>
         </li>
