--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item d-block d-md-none">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
+        <li class="nav-item d-block">  <!-- d-md-none -->
+            <a class="font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
         </li>
@@ -10,14 +10,14 @@
             <!-- <button class="btn dropdown-toggle font-weight-bold text-white border-0" type="button" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </button> -->
-            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="all-products-link">
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">By Price</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">By Rating</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">By Category</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">By Price</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">By Rating</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">By Category</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">All Products</a>
             </div>
         </li>
 
@@ -25,14 +25,14 @@
             <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="wigs-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Wigs
             </button> -->
-            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="wigs-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Wigs
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="wigs-link">
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">360 Lace Wigs</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Frontal Lace Wigs</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Synthetic Wigs</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Wigs</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">360 Lace Wigs</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Frontal Lace Wigs</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Synthetic Wigs</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">All Wigs</a>
             </div>
         </li>
 
@@ -40,14 +40,14 @@
             <!-- <button class="btn dropdown-toggle font-weight-bold text-white" type="button" id="hair-care-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hair Care Products
             </button> -->
-            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="deals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-white mr-5" href="#" id="hair-care-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hair Care Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="hair-care-products-link">
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Shampoo</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Conditioner</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Hair Oils</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All Hair Care Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Hair Shampoo</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Hair Conditioner</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Hair Oils</a>
+                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">All Hair Care Products</a>
             </div>
         </li>
 
