--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -28,17 +28,26 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 {% if product.image %}
-                                    <a href="">
+                                    <a href="{% url 'product_detail' product.id %}">
                                         <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
                                 {% else %}
-                                    <a href="">
+                                    <a href="{% url 'product_detail' product.id %}">
                                         <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                     </a>
                                 {% endif %}
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.name }}</p>
                                 </div>
+
+                                <div class="cart-btn">
+                                    <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                                </div>
+
+                                <div class="view-btn">
+                                    <a class="btn btn-outline-success" href="{% url 'product_detail' product.id %}">View</a>
+                                </div>
+
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
@@ -48,6 +57,7 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating!</small>
                                             {% endif %}
+                                            <p class="mt-3">{{ product.description }}</p>
                                         </div>
                                     </div>
                                 </div>
